--- a/Note-App/Backend/.env
+++ b/Note-App/Backend/.env
@@ -1,2 +1,2 @@
-MongodbUrl="mongodb+srv://sarveshkmishra119:Rajan7985@cluster0.kyxb5qg.mongodb.net/NoteApp"
+MongodbUrl="mongodb+srv://sarveshkmishra119:#########@cluster0.kyxb5qg.mongodb.net/NoteApp"
 PORT=5000
